# Prototype3D

./: .gitignore  Component Specifications.docx  README.md
samples/: CMakeLists.txt  Sample1_CreateWindow.cpp  Sample2_Triangle.cpp
samples/Sample1/: Sample1_CreateWindow.cpp
samples/Sample2/: DrawTriangle.cpp  Sample2_Triangle.cpp
samples/Sample3/: DrawIndexed.cpp
src/: CMakeLists.txt  Constants.h  NL_D3D11Utility.cpp  NL_D3D11Utility.h  P3D_RenderingEngine.cpp  P3D_RenderingEngine.h  ResourceDescriptions.h  assert.h  p3dTest.cpp  p3d_CharBuffer.h  p3d_CircularBuffer.h  p3d_ConsoleQueue.h  p3d_GlfwWindowManager.cpp  p3d_GlfwWindowManager.h  p3d_ImguiRenderer.cpp  p3d_ImguiUiManager.h  p3d_RenderingResources.h  p3d_ResourceModel.h
src/device/: BufferI.h  GPUArray.cpp  GPUArray.h  GPUMemoryManager.h  GPUMemoryManagerI.h  PixelShaderI.h  RenderingDevice.h  RenderingDeviceI.h  Texture1dArray.cpp  Texture1dArray.h  Texture1dArrayI.h  Texture2dArray.cpp  Texture2dArray.h  Texture2dArrayI.h  Texture3dI.h  VertexShaderI.h
src/device/d3d11/: ComPtr.h  d3d11_Buffer.cpp  d3d11_Buffer.h  d3d11_ConstConvert.cpp  d3d11_ConstConvert.h  d3d11_PixelShader.cpp  d3d11_PixelShader.h  d3d11_Rasterizer.cpp  d3d11_Rasterizer.h  d3d11_RenderingDevice.cpp  d3d11_RenderingDevice.h  d3d11_Texture1dArray.cpp  d3d11_Texture1dArray.h  d3d11_Texture2dArray.cpp  d3d11_Texture2dArray.h  d3d11_Texture3d.cpp  d3d11_Texture3d.h  d3d11_Utility.cpp  d3d11_Utility.h  d3d11_VertexShader.cpp  d3d11_VertexShader.h
src/device/dx/: ComPtr.h  dx_ConstConvert.cpp  dx_ConstConvert.h
src/internal/: NL_D3D11Utility.h  NL_D3D11Utility.inl  p3d_d3d11_RuntimeModel.h
src/internal/shaders/: textured_PS.hlsl  textured_VS.hlsl  untextured_PS.hlsl  untextured_VS.hlsl
src/legacy/: p3dTest.cpp  p3d_Camera.cpp  p3d_Camera.h  p3d_ResourceModel.h
src/legacy/internal/: NL_D3D11Utility.cpp  p3d_SceneImporter.cpp  p3d_SceneImporter.h  p3d_Uuid.h
src/math/: Vec2.h  Vec3.h
src/p3d/: Constants.cpp  Constants.h  ResourceDescriptions.h  ResourceHandles.h  assert.h
src/p3d/common/: AABB.cpp  AABB.h  BoundingVolumeI.h  StandardShapes.cpp  StandardShapes.h  Utils.cpp  Utils.h  Uuid.h
src/p3d/device/: BufferI.h  RasterizerI.h  RenderingDevice.h  RenderingDeviceI.h  Texture1dArrayI.h
src/p3d/device/d3d11/: d3d11_Buffer.cpp  d3d11_Rasterizer.h  d3d11_RenderingDevice.cpp  d3d11_RenderingDevice.h  d3d11_Texture1dArray.cpp  d3d11_Texture1dArray.h  d3d11_Texture2dArray.h  d3d11_Texture3d.cpp  d3d11_Texture3d.h  d3d11_Utility.cpp  d3d11_Utility.h
src/p3d/device/dx/: dx_ComPtr.h  dx_ConstConvert.cpp  dx_ConstConvert.h
src/p3d/legacy/: CMakeLists.txt
src/p3d/legacy/internal/: NL_D3D11Utility.inl  NL_LuaCustomTypes.h  p3d_d3d11_Utility.h
src/p3d/renderer/: GPUResourceProviderI.h  MaterialI.h  MeshI.h  RendererI.h  Texture2dArrayI.h  Texture3dI.h
src/p3d/renderer/d3d11/: d3d11_ConstConvert.cpp  d3d11_ConstConvert.h  d3d11_Material.h  d3d11_Mesh.cpp  d3d11_Mesh.h  d3d11_Renderer.cpp  d3d11_Renderer.h  d3d11_Texture1dArray.cpp  d3d11_Texture2dArray.cpp  d3d11_Utility.cpp  d3d11_Utility.h  d3d11_VertexShader.h
src/p3d/renderer/dx/: dx_BufferDescriptions.h  dx_ConstConvert.cpp  dx_ProjectionMath.h
src/p3d/renderer/shaders/hlsl/: diffuse_ps.hlsl  diffuse_vs.hlsl  pos_ps.hlsl  uber_ps.hlsl  uber_vs.hlsl
src/p3d/scene/: Camera.cpp  Camera.h  CameraI.h  NullSpacePartitioner.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ResourceBank.h  Scene.cpp  Scene.h  SceneI.h  SpacePartitionerI.h
src/p3d/util/: SceneResourceNode.h  p3d_ConsoleQueue.h  p3d_ImguiRenderer.h  p3d_ImguiUiManager.cpp  p3d_SceneImporter.cpp  util_CameraControllerI.h  util_DDSTextureLoader.cpp  util_DDSTextureLoader.h  util_DefaultSampleRunner.cpp  util_DefaultSampleRunner.h  util_GlfwWindowManager.cpp  util_GlfwWindowManager.h  util_SceneGraph.cpp  util_SceneGraph.h  util_SceneGraphI.h  util_SceneImporter.cpp  util_SceneImporter.h  util_TextureImporter.cpp  util_TextureImporter.h
src/samples/: CMakeLists.txt  Sample2_Triangle.cpp
src/samples/Sample1/: CreateWindow.cpp
src/samples/Sample2/: ImportScene.cpp
src/samples/Sample3/: DrawTriangle.cpp
src/samples/Sample4/: Sponza.cpp
src/samples/Sample5/: CreateScene.cpp
src/samples/Sample6/: Transparency.cpp
src/samples/Sample7/: Lighting.cpp
src/util/: Util_GlfwWindowManager.cpp  p3d_ConsoleQueue.cpp  p3d_GlfwWindowManager.cpp  p3d_GlfwWindowManager.h  p3d_ImguiUiManager.h  p3d_SceneImporter.cpp  p3d_SceneImporter.h  p3d_Timer.h  util_DefaultSampleRunner.cpp  util_DefaultSampleRunner.h  util_GlfwWindowManager.h
